# mass-invite-vk-bot-rust-

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  main.rs  password.rs  pin.rs  vk_api.rs
